# quant-reproduce

./: .gitignore  .gitmodules  README.md  pyproject.toml
AWQ/: README.md  env.yml
AWQ/results/: _meta.md  canonical_w4g128_ppl_paper_style.txt  canonical_w4g128_ppl_stdout.txt  canonical_w4g128_zeroshot.json  canonical_w4g128_zeroshot_stdout.txt
BiLLM/: README.md  env.yml
BiLLM/results/: _meta.md  canonical_w1.08_stdout.txt
KIVI/: README.md  env.yml
KIVI/results/: _meta.md  baseline_fp16_eval_stdout.txt  baseline_fp16_pred_stdout.txt  canonical_k2v2_pred_stdout.txt  mem_spd_fp16_bs16.txt  mem_spd_k2v2_bs16.txt
common/: data.py  models.py
common/eval/: memory.py  ppl.py  zeroshot.py
docs/: howto-reproduce.md
docs/superpowers/plans/: 2026-05-09-phase1-bootstrap-and-gptq.md
docs/superpowers/specs/: 2026-05-09-quant-reproduce-design.md
scripts/: env_lab.sh  env_local.ps1  run_phase1_method.sh
tests/: conftest.py  test_data.py  test_eval_memory.py  test_eval_ppl.py  test_eval_zeroshot.py  test_models.py
