[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-reproduce-common"
version = "0.1.0"
description = "Shared eval / data / model-loading layer for the LLM quantization reproduction portfolio."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.27",
    "lm-eval>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "require_cuda: requires CUDA-capable GPU",
    "slow: long-running tests (lm-eval-harness, canonical-model runs)",
]

[tool.ruff]
line-length = 110
target-version = "py310"
